NF-528 - removed unused component reference

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/fieldSet.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/fieldSet.scala.html
@@ -16,7 +16,7 @@
 
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components._
 
-@this(govukFieldset: GovukFieldset, govukHint: GovukHint)
+@this(govukFieldset: GovukFieldset)
 
 @(legend: String, asHeading: Boolean = true, hint: Option[Html] = None)(content: Html)(implicit messages: Messages)
 
