--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/fieldSet.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/fieldSet.scala.html
@@ -14,13 +14,15 @@
  * limitations under the License.
  *@
 
-@this(govukFieldset: GovukFieldset, govukHint: GovukHint)
+@import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.html.components._
+
+@this(govukFieldset: GovukFieldset)
 
 @(legend: String, asHeading: Boolean = true, hint: Option[Html] = None)(content: Html)(implicit messages: Messages)
 
 @body = {
   @hint.map(html =>
-    govukHint(Hint(content = HtmlContent(html)))
+     paragraphHtml(html)
   )
   @content
 }
